Updates from lecture

--- a/Pager/Pager/Base.lproj/Main.storyboard
+++ b/Pager/Pager/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -26,6 +27,64 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="87" y="-27"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="SmE-qn-dQO">
+            <objects>
+                <viewController id="x6w-qb-ti8" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="59i-DS-ACY"/>
+                        <viewControllerLayoutGuide type="bottom" id="2w0-X7-xUZ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="rDR-4R-nie">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Vi-rx-AiY">
+                                <rect key="frame" x="67" y="141" width="100" height="100"/>
+                                <color key="backgroundColor" red="0.058823529409999999" green="0.66666666669999997" blue="0.20784313730000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="jb8-3i-Zvy"/>
+                                    <constraint firstAttribute="height" constant="100" id="l3Z-nG-1Ch"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IDT-1L-ICo">
+                                <rect key="frame" x="67" y="359" width="100" height="100"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="Ats-co-98f"/>
+                                    <constraint firstAttribute="width" constant="100" id="xmW-If-czW"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="7Vi-rx-AiY" firstAttribute="leading" secondItem="rDR-4R-nie" secondAttribute="leadingMargin" constant="51" id="Vf3-Iv-6zh"/>
+                            <constraint firstItem="7Vi-rx-AiY" firstAttribute="top" secondItem="59i-DS-ACY" secondAttribute="bottom" constant="121" id="Zow-fq-U4y"/>
+                            <constraint firstItem="IDT-1L-ICo" firstAttribute="top" secondItem="7Vi-rx-AiY" secondAttribute="bottom" constant="118" id="if4-EB-y39"/>
+                            <constraint firstItem="IDT-1L-ICo" firstAttribute="leading" secondItem="7Vi-rx-AiY" secondAttribute="trailing" constant="112" id="pO2-R8-7x9"/>
+                            <constraint firstItem="IDT-1L-ICo" firstAttribute="leading" secondItem="rDR-4R-nie" secondAttribute="leadingMargin" constant="51" id="qFc-Ch-1Wt"/>
+                            <constraint firstItem="IDT-1L-ICo" firstAttribute="top" secondItem="59i-DS-ACY" secondAttribute="bottom" constant="121" id="qz9-bw-ppk"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="pO2-R8-7x9"/>
+                                <exclude reference="qz9-bw-ppk"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=compact-widthClass=compact">
+                            <mask key="constraints">
+                                <exclude reference="if4-EB-y39"/>
+                                <include reference="pO2-R8-7x9"/>
+                                <exclude reference="qFc-Ch-1Wt"/>
+                                <include reference="qz9-bw-ppk"/>
+                            </mask>
+                        </variation>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wvN-17-soU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="940" y="-27"/>
         </scene>
     </scenes>
 </document>
