--- a/SimpleScrollView/SimpleScrollView/Base.lproj/Main.storyboard
+++ b/SimpleScrollView/SimpleScrollView/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -26,5 +26,64 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
+        <!--New Scroll View View Controller-->
+        <scene sceneID="1Iw-lF-aK5">
+            <objects>
+                <viewController id="0sc-DQ-bOg" customClass="NewScrollViewViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="BXs-Sh-jnU"/>
+                        <viewControllerLayoutGuide type="bottom" id="VOe-8e-O5M"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="zTw-sm-v9Y">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.25" maximumZoomScale="3" translatesAutoresizingMaskIntoConstraints="NO" id="L1S-zi-dXu">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="trU-cK-kSV" userLabel="contentView">
+                                        <rect key="frame" x="0.0" y="0.0" width="2592" height="1936"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cats" translatesAutoresizingMaskIntoConstraints="NO" id="njh-92-JfG">
+                                                <rect key="frame" x="0.0" y="0.0" width="2592" height="1936"/>
+                                            </imageView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="njh-92-JfG" firstAttribute="top" secondItem="trU-cK-kSV" secondAttribute="top" id="233-zg-9UL"/>
+                                            <constraint firstItem="njh-92-JfG" firstAttribute="leading" secondItem="trU-cK-kSV" secondAttribute="leading" id="kaG-0k-8Qx"/>
+                                            <constraint firstAttribute="trailing" secondItem="njh-92-JfG" secondAttribute="trailing" id="yVp-Iw-xSp"/>
+                                            <constraint firstAttribute="bottom" secondItem="njh-92-JfG" secondAttribute="bottom" id="ztH-7W-m4b"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="trU-cK-kSV" secondAttribute="trailing" id="55M-mS-KXO"/>
+                                    <constraint firstItem="trU-cK-kSV" firstAttribute="top" secondItem="L1S-zi-dXu" secondAttribute="top" id="6zp-9I-Si3"/>
+                                    <constraint firstAttribute="bottom" secondItem="trU-cK-kSV" secondAttribute="bottom" id="9Yp-VY-FhN"/>
+                                    <constraint firstItem="trU-cK-kSV" firstAttribute="leading" secondItem="L1S-zi-dXu" secondAttribute="leading" id="Gbv-W9-hz2"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="L1S-zi-dXu" secondAttribute="bottom" id="ClC-NW-ZGE"/>
+                            <constraint firstItem="L1S-zi-dXu" firstAttribute="leading" secondItem="zTw-sm-v9Y" secondAttribute="leading" id="MZi-M0-TSq"/>
+                            <constraint firstAttribute="trailing" secondItem="L1S-zi-dXu" secondAttribute="trailing" id="Teg-1W-YGr"/>
+                            <constraint firstItem="L1S-zi-dXu" firstAttribute="top" secondItem="zTw-sm-v9Y" secondAttribute="top" id="WlE-dr-82H"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="contentView" destination="trU-cK-kSV" id="qnB-bZ-LXc"/>
+                        <outlet property="scrollView" destination="L1S-zi-dXu" id="WIh-57-uPA"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hcC-Bz-B2G" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="34" y="-823"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="cats" width="2592" height="1936"/>
+    </resources>
 </document>
